- add framework that allows tools to delete themselves? (eg, flag crushed by glacier)
- make advancing glaciers delete flags that are on valley floor
- Archie reports flags behaving strangely, similar positions moving at different rates, occurs when dropped close to valley floor? 
- increase zoom on vertical axis by 2x
- add moving glyphs to ice surface to show motion
- use solid colors for ice surface and cross-section

MEDIUM PRIORITY:
- add pseudo 3D model & view for rocks
- create rocks at random elevations in ice cross-section above ELA, at random distance across valley width
- deposit rocks at terminus to create moraine
- delete rocks on valley floor when covered by an advancing glacier
- visual representation of snowfall
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- extruded portion of ice jiggles at headwall while it's evolving
- remove yaw from mountains image perspective, or add yaw to ice perspective (wait until tools behavior is finalized)
- adjust magnification of zoomed view?
- adjust aspect ratio?
- add Advanced panel

LOW PRIORITY:
- right edge of ice thickness tool icon is clipped (PNode.toImage problem caused by stroke width?)
- make flags fall over (with somewhat random orientation?) when they hit the valley floor
- remove registration points from mountains image
- creating a tool and dragging it straight to the trash doesn't work because we're in the middle of an event sequence
- developer controls for ice velocity "look"?
- add moving debris (if textures are not convincing enough)
- make mountains image big enough so that all we see is sky when the birds-eye view is made very wide
- generalize all charts, there's too much duplicated code (ditto in controller that wires control panel to charts)
- confirm that titles and axes on graphs are as desired