@@ -13,7 +13,6 @@ HIGH PRIORITY:
 - Archie reports flags behaving strangely, similar positions moving at different rates, occurs when dropped close to valley floor? 
 - increase zoom on vertical axis by 2x
 - add moving glyphs to ice surface to show motion
-- use solid colors for ice surface and cross-section
 
 MEDIUM PRIORITY:
 - add pseudo 3D model & view for rocks
@@ -80,6 +79,8 @@ CLEANUP:
 
 
 DONE:
+5/13/08 - update data/glaciers/images/LICENSE.txt
+5/13/08 - use solid colors for ice surface and cross-section, delete texture files
 5/13/08 - increase precision of glacial budget meter displayed values to 0.01 meter
 5/13/08 - create ticket #558: image returned by PPath.toImage is clipped on right and bottom edges
 5/13/08 - add createImage method to all tool nodes, used to create icons
